Adding jpa integrated with h2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 logging.level.org.springframework=debug
 spring.messages.basename=messages
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
